third_party/move/move-compiler-v2/tests/checking/typing/assign_wrong_type.exp

Diagnostics:
error: cannot assign `R` to left-hand side of type `S`
  ┌─ tests/checking/typing/assign_wrong_type.move:8:9
  │
8 │         S { g } = R {f :0};
  │         ^^^^^^^

error: cannot assign `R` to left-hand side of type `S`
  ┌─ tests/checking/typing/assign_wrong_type.move:9:10
  │
9 │         (S { g }, R { f }) = (R{ f: 0 }, R{ f: 1 });
  │          ^^^^^^^

error: tuple type `()` is not allowed as a local variable type
   ┌─ tests/checking/typing/assign_wrong_type.move:13:13
   │
13 │         let x;
   │             ^
   │
   = required by declaration of local `x`

error: cannot assign `integer` to left-hand side of type `()`
   ┌─ tests/checking/typing/assign_wrong_type.move:17:9
   │
17 │         () = 0;
   │         ^^

error: the left-hand side has 3 items but the right-hand side provided 4
   ┌─ tests/checking/typing/assign_wrong_type.move:18:9
   │
18 │         (x, b, R{f}) = (0, false, R{f: 0}, R{f: 0});
   │         ^^^^^^^^^^^^

error: the left-hand side has 3 items but the right-hand side provided 2
   ┌─ tests/checking/typing/assign_wrong_type.move:19:9
   │
19 │         (x, b, R{f}) = (0, false);
   │         ^^^^^^^^^^^^

error: cannot assign `integer` to left-hand side of type `bool`
   ┌─ tests/checking/typing/assign_wrong_type.move:27:10
   │
27 │         (x, b, R{f}, r) = (0, false, R{f: 0}, R{f: 0});
   │          ^

error: cannot assign `bool` to left-hand side of type `integer`
   ┌─ tests/checking/typing/assign_wrong_type.move:27:13
   │
27 │         (x, b, R{f}, r) = (0, false, R{f: 0}, R{f: 0});
   │             ^

error: cannot assign `u64` to left-hand side of type `address`
   ┌─ tests/checking/typing/assign_wrong_type.move:27:18
   │
27 │         (x, b, R{f}, r) = (0, false, R{f: 0}, R{f: 0});
   │                  ^

error: cannot assign `R` to left-hand side of type `S`
   ┌─ tests/checking/typing/assign_wrong_type.move:27:22
   │
27 │         (x, b, R{f}, r) = (0, false, R{f: 0}, R{f: 0});
   │                      ^
